tests/fixtures/invalid/unnecessary-param-annotation.php
<?php

declare(strict_types=1);

/**
 * @param string $value
 */
function identity(string $value): string
{
    return $value;
}
